<resources>
    <string name="app_name">LottieWorld</string>
    <string name="explore_str">Explore</string>
    <string name="news_str">News</string>
    <string name="scan_str">Scan</string>
    <string name="favorites_str">Favorites</string>
    <string name="profile_str">Profile</string>
    <string name="back_to_exit_message">Press BACK again to exit</string>
    <string name="something_went_wrong_str">Something went wrong...</string>
    <string name="txt_retry_subheading_str">An alien is probably blocking your signal.</string>
    <string name="message_no_network_connected_str">No Internet Available</string>
    <string name="retry">Retry</string>
    <string name="featured_animators_str">Top Animators</string>
    <string name="featured_animations_str">Featured</string>
    <string name="popular_str">Popular</string>
    <string name="recent_str">Recent</string>
    <string name="permissions_not_granted_str">Permissions not granted by the user.</string>
    <string name="no_news_str">No news posted yet!</string>
    <string name="double_tap_anim_str">Double tap on any animation to add in favorites.</string>
    <string name="edit_profile_str">Edit Profile</string>
    <string name="animations_str">Animations</string>
    <string name="my_animations_str">My Animations</string>
    <string name="liked_animations_str">Liked Animations</string>
    <string name="day_night_mode_str">Day Night Mode</string>
    <string name="preferences_str">Preferences</string>
    <string name="sign_out_str">Sign out</string>
    <string name="user_is_logged_out">"User has been logged out. "</string>
    <string name="thousands_of_lottie_animations">1000s of Lottie animations</string>
    <string name="from_top_creators_message_str">from top creators waiting to be discover, save and share from the palm of your hand</string>
    <string name="login_str">Login</string>
    <string name="animation_details_str">Animation Details</string>
</resources>