<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph.xml"
    app:startDestination="@id/exploreFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.wajahatkarim3.lottieworld.ui.news.NewsFragment"
        android:label="@string/news_str"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.wajahatkarim3.lottieworld.ui.explore.ExploreFragment"
        android:label="@string/explore_str"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_exploreFragment_to_animationDetailsFragment"
            app:destination="@id/animationDetailsFragment">

            <argument
                android:name="animationModel"
                android:defaultValue="@null"
                app:nullable="true"
                app:argType="com.wajahatkarim3.lottieworld.data.model.AnimationModel" />

        </action>
    </fragment>

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.wajahatkarim3.lottieworld.ui.scan.ScanFragment"
        android:label="@string/scan_str" >
        <action
            android:id="@+id/action_scanFragment_to_animationDetailsFragment"
            app:destination="@id/animationDetailsFragment" >
            <argument
                android:name="animationModel"
                android:defaultValue="@null"
                app:nullable="true"
                app:argType="com.wajahatkarim3.lottieworld.data.model.AnimationModel" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.wajahatkarim3.lottieworld.ui.favorites.FavoritesFragment"
        android:label="@string/favorites_str"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_animationDetailsFragment"
            app:destination="@id/animationDetailsFragment" >
            <argument
                android:name="animationModel"
                android:defaultValue="@null"
                app:nullable="true"
                app:argType="com.wajahatkarim3.lottieworld.data.model.AnimationModel" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.wajahatkarim3.lottieworld.ui.profile.ProfileFragment"
        android:label="@string/profile_str"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/animationDetailsFragment"
        android:name="com.wajahatkarim3.lottieworld.ui.anim_details.AnimationDetailsFragment"
        android:label="@string/animation_details_str"
        tools:layout="@layout/fragment_animation_details" />

</navigation>