<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/retry_animation"
        tools:layout_height="@dimen/_250sdp"
        tools:background="@color/loading_gray"/>

    <TextView
        android:id="@+id/txtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:textColor="@color/text_emphasized"
        app:layout_constraintTop_toBottomOf="@+id/lottieRetry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/something_went_wrong_str"/>

    <TextView
        android:id="@+id/txtSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtHeading"
        app:layout_constraintBottom_toTopOf="@+id/btnRetry"
        app:layout_constraintVertical_bias="0.05"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/text_normal"
        android:text="@string/txt_retry_subheading_str" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/retry"
        app:strokeColor="@color/color_primary"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_30sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>