<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/keyline_4"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/lblAnimators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/featured_animators_str"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAnimators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="@dimen/avatarImageSize"
            android:layout_marginTop="@dimen/keyline_2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_animator_layout" />

        <include
            android:id="@+id/layoutShimmerAnimators"
            layout="@layout/layout_animators_shimmer_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/keyline_2" />

        <!-- Featured Animations -->
        <TextView android:id="@+id/lblFeaturedAnimations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/featured_animations_str"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/keyline_5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFeaturedAnimations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_animation_layout" />

        <include
            android:id="@+id/layoutShimmerFeaturedAnims"
            layout="@layout/layout_animations_shimmer_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/keyline_2" />

        <!-- Popular Animations -->
        <TextView android:id="@+id/lblPopularAnimations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_str"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/keyline_5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPopularAnimations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_animation_layout" />

        <include
            android:id="@+id/layoutShimmerPopularAnims"
            layout="@layout/layout_animations_shimmer_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/keyline_2" />

        <!-- Recent Animations -->
        <TextView android:id="@+id/lblRecentAnimations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_str"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/keyline_5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecentAnimations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_animation_layout" />

        <include
            android:id="@+id/layoutShimmerRecentAnims"
            layout="@layout/layout_animations_shimmer_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/keyline_2" />

        <include
            android:id="@+id/layoutRetry"
            layout="@layout/layout_retry"
            android:visibility="gone" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>